--- a/src/SwitchProfile.module.css
+++ b/src/SwitchProfile.module.css
@@ -59,8 +59,8 @@
     border: 1px solid rgba(255, 255, 255, 0.18);
     border-radius: 10px;
 
-    padding: 8%;
-    padding-left: 12%;
+    padding: 10% 8%;
+    padding-left: 14%;
 }
 
 .switchProfileParent>p {
@@ -76,7 +76,7 @@
     top: 0;
     left: 2px;
     white-space: nowrap;
-    font-size: 12px;
+    font-size: 14px;
     height: 100%;
     text-align: center;
 }
